[package]
name = "go-cart"
version = "0.1.0"
authors = ["Corey Farwell <coreyf@rwell.org>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.56"
fftw = "0.6"
cc = "1.0"
